added a confirm dialog upon choosing to delete

--- a/bookshelf/main/templates/book.html
+++ b/bookshelf/main/templates/book.html
@@ -4,10 +4,11 @@
     function getContent(){
         document.getElementById("{{rand}}").value = document.getElementById("{{rand2}}").innerHTML;
     }
+
 </script>
 <style>
     .font-color-red{
-        color: red;
+    color: red;
     }
 </style>
 <!-- https://vitalets.github.io/x-editable/docs.html -->
@@ -20,14 +21,18 @@
         </tr>
         </thead>
         <tbody>
-        <form method="POST" action="{{id_books}}" onsubmit="return getContent()">
-            <input type="hidden" id="{{rand}}" name="title" />
-            <input type="hidden" name="id" value="{{data.id}}"/>
-            <input type="submit" />
-        </form>
         <tr>
             <td>{{data.id}}</td>
-            <td><a ><div class="font-color-red" id="{{rand2}}" contenteditable="true">{{data.title}}</div></a></td>
+            <td><a>
+                <div class="font-color-red" id="{{rand2}}" contenteditable="true">{{data.title}}</div>
+            </a></td>
+            <td>
+                <form method="POST" action="{{id_books}}" onsubmit="return getContent()">
+                    <input type="hidden" id="{{rand}}" name="title"/>
+                    <input type="hidden" name="id" value="{{data.id}}"/>
+                    <input type="submit"/>
+                </form>
+            </td>
         </tr>
         </tbody>
     </table>
